chore: code refactor & clean-up